# FaaSBoard

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.in  Dockerfile.in.deg  Dockerfile.out  Dockerfile.out.deg  README.md  Run_locally.md  Run_on_aws.md  TODO.txt  commands.txt  compile_command.txt  notebook.txt
experiment/hotcache/: hot_cache.xlsx  test_hot_cache.sh
include/app/: bfs.h  cc.h  pr.h  sssp.h
include/communication/: caas.h  meta_server.h  proxy_server.h
include/compute/: graph.h  graph_set.h
include/preprocess/: graph.h  graph_set.h  partition.h  partition_strategy.h  raw_graph.h
include/util/: atomic.h  bitmap.h  elasticache.h  flags.h  io.h  log.h  mathtools.h  print.h  reduce.h  s3.h  sdk.h  timer.h  types.h  utils.h
script/: analyze_concurrent.py  analyze_duration_memory.py  analyze_durations.py  analyze_dynamic_invoke.py  analyze_dynamic_invoke_log.py  analyze_log.py  analyze_partitioning.py  analyze_partitioning_local.py  aws-config.json  batch_build_function.py  build_friendster_bfs_func.py  build_function.py  build_proxy.sh  clear_elasticache.py  cpu_test.csv  cpu_test.py  gen_rmat27.py  list_allkeys.py  output.txt  prepare_dataset.sh  prepare_machine.sh  preprocess_graph.sh  run.sh  run_rpm.py  update-fargate-endpoints.py  upload_code.py  upload_to_cluster.py  upload_to_elasticache.py  upload_to_s3.py
script/analyze/: analyze_dynamic_invoke.py  analyze_workload.py
test/: lambda_bfs.cpp  lambda_cc.cpp  lambda_pr.cpp  lambda_sssp.cpp  local_bfs.cpp  local_cc.cpp  local_pr.cpp  local_sssp.cpp  main.cpp  meta_server.cpp  proxy_server.cpp  s3_test.cpp  test_bfs.cpp  test_pr.cpp
test/others/: correctness_test.cpp  cpu_test.cpp  fs_test.cpp  lambda_test.cpp  weight_test.cpp
test/preprocess/: column.cpp  mondriaan_column_row.cpp  mondriaan_row_column.cpp  naive_binpack.cpp  naive_cyclic.cpp  naive_stagger.cpp  optimal_binpack.cpp  preprocess_and_save.cpp  row.cpp  test.cpp  test1.cpp  txt2csr.cpp
